--- a/public/style.css
+++ b/public/style.css
@@ -21,11 +21,11 @@ body {
 ul {
     list-style-type: none;
     padding: 0;
-    width: 25%;
+    width: auto;
     overflow-y: auto;
     max-height: 400px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 li.disconnect {
@@ -41,7 +41,7 @@ li.connect {
 ul li {
     background-color: rgb(100, 100, 100);
     padding: 0.5em;
-    margin: 0 0 0.5em 0;
+    margin: 0 0.5em 0.5em 0;
     width: auto;
     min-height: 2em;
     text-align: left;
@@ -76,10 +76,23 @@ textarea {
     resize: none;
 }
 
-.red {
-    color: rgb(255, 68, 68);
+.unready {
+    color: rgb(0, 0, 0);
 }
 
-.green {
+.ready {
     color: rgb(10, 209, 10);
+}
+
+h3 {
+    text-align: left;
+}
+
+.countdown {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 120px;
+    pointer-events:none;
 }
