--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -33,6 +33,15 @@ ul {
     width: 50%;
 }
 
+.buttonList li {
+    border-radius: 10px 10px 10px 10px;
+    background-color: rgb(139, 135, 135);
+}
+
+.buttonList li:hover {
+    border: 5px solid white;
+}
+
 ul li {
     background-color: rgb(100, 100, 100);
     padding: 0.5em;
