--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,6 +7,7 @@ h1{
 	place-items: center;
     color: white;
     text-decoration: underline;
+    text-align: center;
 }
 
 h2 {
@@ -66,6 +67,8 @@ button {
     background-color: white;
     margin-top: 10px;
     flex-grow: 1;
+    border-radius: 10px;
+    font-size: 26px;
 }
 
 .buttons {
@@ -95,13 +98,13 @@ button {
 }
 
 .item {
-    margin: 50px;
+    margin: 10px;
     width: 50%;
     justify-content: center;
 }
 
 .item button{
-    width: 50%;
+    width: 70%;
     height: 75px;
 }
 
